tests/golden/expected/call_undefined.stdout.txt
Compile error: tests/fixtures/call_undefined.lamp:8: type error: call to undefined function "frobnicate"
  8 | 	frobnicate(3)
    |  ^
